@@ -2,7 +2,7 @@
  OmegaT 3.6.0
 ----------------------------------------------------------------------
  16 Enhancements
-  4 Bug fixes
+  5 Bug fixes
 ----------------------------------------------------------------------
 3.6.0 vs 3.5.3
 
@@ -67,6 +67,10 @@
 
   - ResourceBundleFilter duplicates line continuation characters in comment
   https://sourceforge.net/p/omegat/bugs/796/
+
+  - Cycle Switch Case (Shift+F3) doesn't work properly on strings with
+digits
+  https://sourceforge.net/p/omegat/bugs/612/
 
   Other changes:
 
